@@ -1,7 +1,16 @@
 1.0.2-devel
 ======================
 
- * Fixed #4572 and #4909 - Unicode problems with using kupu together with mxTidy
+ * Use the ControlledMarshaller from the Marshall product if
+   available. Fallbacks to existing marshaller.
+   [sidnei]
+
+ * Enable __dav_marshall__ by default on ATTopic, ATFolder and
+   ATBTreeFolder.
+   [sidnei]
+
+ * Fixed #4572 and #4909 - Unicode problems with using kupu together
+   with mxTidy
    [hannosch]
 
  * Fixed #4865 - Spelling error on location criteria.
